DB connect using OOP for Supplier

--- a/invoPRO/invoPRO.csproj
+++ b/invoPRO/invoPRO.csproj
@@ -58,6 +58,7 @@
     <Compile Include="customer.Designer.cs">
       <DependentUpon>customer.cs</DependentUpon>
     </Compile>
+    <Compile Include="DBConnection.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +73,7 @@
     <Compile Include="Supplier.Designer.cs">
       <DependentUpon>Supplier.cs</DependentUpon>
     </Compile>
+    <Compile Include="User\User.cs" />
     <Compile Include="user_manage.cs">
       <SubType>Form</SubType>
     </Compile>
