--- a/invoPRO/invoPRO.csproj
+++ b/invoPRO/invoPRO.csproj
@@ -59,6 +59,8 @@
       <DependentUpon>customer.cs</DependentUpon>
     </Compile>
     <Compile Include="DBConnection.cs" />
+    <Compile Include="Entities\User.cs" />
+    <Compile Include="Events\UserEvents.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,13 +69,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Supplier.cs">
+    <Compile Include="SupplierUI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Supplier.Designer.cs">
-      <DependentUpon>Supplier.cs</DependentUpon>
+    <Compile Include="SupplierUI.Designer.cs">
+      <DependentUpon>SupplierUI.cs</DependentUpon>
     </Compile>
-    <Compile Include="User\User.cs" />
     <Compile Include="user_manage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,8 +99,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Supplier.resx">
-      <DependentUpon>Supplier.cs</DependentUpon>
+    <EmbeddedResource Include="SupplierUI.resx">
+      <DependentUpon>SupplierUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="user_manage.resx">
       <DependentUpon>user_manage.cs</DependentUpon>
