--- a/invoPRO/invoPRO.csproj
+++ b/invoPRO/invoPRO.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Supplier.cs" />
+    <Compile Include="Events\SupplierEvents.cs" />
     <Compile Include="Views\AdminView.cs">
       <SubType>Form</SubType>
     </Compile>
