--- a/invoPRO/invoPRO.csproj
+++ b/invoPRO/invoPRO.csproj
@@ -46,9 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Customer.cs" />
-    <Compile Include="Events\CustomerEvents.cs" />
+    <Compile Include="Entities\Items.cs" />
+    <Compile Include="Entities\Sales.cs" />
+    <Compile Include="Events\GetInfoEvents.cs" />
+    <Compile Include="Events\ItemEvents.cs" />
     <Compile Include="Entities\Supplier.cs" />
+    <Compile Include="Events\SalesEvents.cs" />
     <Compile Include="Events\SupplierEvents.cs" />
     <Compile Include="Views\AdminView.cs">
       <SubType>Form</SubType>
@@ -56,17 +59,15 @@
     <Compile Include="Views\AdminView.Designer.cs">
       <DependentUpon>AdminView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\CustomerView.cs">
+    <Compile Include="DBConnection.cs" />
+    <Compile Include="Entities\User.cs" />
+    <Compile Include="Events\UserEvents.cs" />
+    <Compile Include="Views\DoTransaction.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\CustomerView.Designer.cs">
-      <DependentUpon>CustomerView.cs</DependentUpon>
+    <Compile Include="Views\DoTransaction.Designer.cs">
+      <DependentUpon>DoTransaction.cs</DependentUpon>
     </Compile>
-    <Compile Include="DBConnection.cs" />
-    <Compile Include="Entities\Inventory.cs" />
-    <Compile Include="Entities\User.cs" />
-    <Compile Include="Events\InventoryEvents.cs" />
-    <Compile Include="Events\UserEvents.cs" />
     <Compile Include="Views\LoginView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,12 +88,6 @@
     <Compile Include="Views\UserView.Designer.cs">
       <DependentUpon>UserView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\InventoryView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\InventoryView.Designer.cs">
-      <DependentUpon>InventoryView.cs</DependentUpon>
-    </Compile>
     <Compile Include="Views\WelcomeScreenView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,8 +97,8 @@
     <EmbeddedResource Include="Views\AdminView.resx">
       <DependentUpon>AdminView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\CustomerView.resx">
-      <DependentUpon>CustomerView.cs</DependentUpon>
+    <EmbeddedResource Include="Views\DoTransaction.resx">
+      <DependentUpon>DoTransaction.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\LoginView.resx">
       <DependentUpon>LoginView.cs</DependentUpon>
@@ -122,9 +117,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\UserView.resx">
       <DependentUpon>UserView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Views\InventoryView.resx">
-      <DependentUpon>InventoryView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\WelcomeScreenView.resx">
       <DependentUpon>WelcomeScreenView.cs</DependentUpon>
